<resources>
    <string name="app_name">BeeTrackerRough</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_location">Get Location</string>
    <string name="submit">Submit</string>
    <string name="hint">0</string>
    <string name="how_many_bees_did_you_see">How many bees did you see?</string>
    <string name="image_view">image view</string>
    <string name="increase">increase</string>
    <string name="decrease">decrease</string>
    <string name="no_location">"No location available "</string>
    <string name="give_permission">"You'll need to grant location permission to add bees "</string>
    <string name="bee_sighting_added">Bee sighting added to database! Thank you for your support! </string>
    <string name="click_the_box_after_setting_location">Click the box after setting location!</string>
    <string name="camera_button">Camera button</string>
</resources>