<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/beeuserinputpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeeSightingUserInput">


    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_view"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/grassylandscape" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="206dp"
        android:layout_height="101dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="56dp"
        android:text="@string/how_many_bees_did_you_see"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/increaseButton"
        android:contentDescription="@string/increase"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="62dp"
        android:background="@drawable/round_keyboard_double_arrow_up_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/beeNumber" />

    <android.widget.Button
        android:id="@+id/decreaseButton"
        android:contentDescription="@string/decrease"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="62dp"
        android:background="@drawable/round_keyboard_double_arrow_down_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/increaseButton" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="205dp"
        android:layout_height="165dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/camera_button"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getUserLocationButton" />

    <Button
        android:id="@+id/getUserLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/get_location"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/submit"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraButton" />

    <EditText
        android:id="@+id/beeNumber"
        android:layout_width="48dp"
        android:layout_height="58dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="number"
        android:minEms="0"
        android:numeric="integer"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/decreaseButton"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>